--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "parcel": "^2.13.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.2.0"
+    "react-router": "^7.3.0"
   },
   "devDependencies": {
     "process": "^0.11.10"
